Ya Muestra el mail de la persona en la pagina del perfil

--- a/app/src/main/res/layout/activity_empresa.xml
+++ b/app/src/main/res/layout/activity_empresa.xml
@@ -11,7 +11,7 @@
         android:layout_width="99dp"
         android:layout_height="0dp"
         android:layout_marginTop="96dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView14"
+        app:layout_constraintBottom_toTopOf="@+id/Nombre"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,7 +30,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/Nombre"
         android:layout_width="77dp"
         android:layout_height="0dp"
         android:layout_marginBottom="72dp"
@@ -50,7 +50,7 @@
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        app:layout_constraintTop_toBottomOf="@+id/Nombre" />
 
     <Button
         android:id="@+id/button3"
