--- a/app/src/main/res/layout/activity_productos2.xml
+++ b/app/src/main/res/layout/activity_productos2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Producto">
+    tools:context=".Productos">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
@@ -18,4 +18,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
