--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -23,7 +23,7 @@
         android:layout_width="115dp"
         android:layout_height="0dp"
         android:layout_marginBottom="116dp"
-        android:text=""
+        android:text="hola"
         android:textColor="#000"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/button6"
@@ -50,8 +50,8 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="141dp"
-        android:layout_height="58dp"
+        android:layout_width="143dp"
+        android:layout_height="69dp"
         android:layout_marginStart="135dp"
         android:layout_marginTop="623dp"
         android:layout_marginEnd="135dp"
