--- a/app/src/main/res/layout/main_item.xml
+++ b/app/src/main/res/layout/main_item.xml
@@ -14,49 +14,73 @@
 
 
         <de.hdodenhof.circleimageview.CircleImageView
-         android:layout_height="80dp"
-            android:layout_width="80dp"
-            android:src="@mipmap/ic_launcher"
-            android:layout_centerVertical="true"
             android:id="@+id/img1"
-            app:civ_border_width="2dp"
-            app:civ_border_color="#FF000000"/>
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/ic_launcher"
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="2dp" />
 
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/producto"
-        android:text="Producto"
-        android:textStyle = "bold"
-        android:textSize="25sp"
-        android:textColor="#000"
-        android:layout_toRightOf="@id/img1"
-        android:layout_marginLeft="10dp"/>
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/producto"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/img1"
+            android:text="Producto"
+            android:textColor="#000"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <TextView
             android:id="@+id/CantidadDese"
-            android:text="Cantidad deseada: "
-            android:textStyle = "bold"
-            android:textSize="25sp"
-            android:textColor="#000"
-            android:layout_toRightOf="@id/img1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/producto"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/textoCantidadD"
+            android:text="Cantidad deseada:"
+            android:textColor="#000"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/CantidadAct"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/CantidadAct"
-            android:text="Cantidad Actual: "
-            android:textStyle = "bold"
-            android:textSize="25sp"
-            android:textColor="#000"
-            android:layout_toRightOf="@id/img1"
             android:layout_below="@id/CantidadDese"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/Actnombre"
+            android:text="Cantidad Actual"
+            android:textColor="#000"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/Actnombre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/CantidadDese"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@id/img1"
+            android:text="Cantidad Actual:"
+            android:textColor="#000"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textoCantidadD"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/producto"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/img1"
+            android:text="Cantidad deseada: "
+            android:textColor="#000"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
 
 
     </RelativeLayout>
