--- a/app/src/main/res/layout/activity_evento_org.xml
+++ b/app/src/main/res/layout/activity_evento_org.xml
@@ -17,18 +17,19 @@
         android:textColor="#0B0A0A"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button6"
+        app:layout_constraintBottom_toTopOf="@+id/CrearORG"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/CrearORG"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="45dp"
         android:layout_marginEnd="45dp"
         android:layout_marginBottom="36dp"
         android:backgroundTint="#B5F36C"
+        android:onClick="crearEvento"
         android:text="Crear"
         android:textColor="#0B0A0A"
         android:textSize="16sp"
@@ -55,7 +56,7 @@
         app:layout_constraintBottom_toTopOf="@+id/button9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        app:layout_constraintTop_toBottomOf="@+id/CrearORG" />
 
     <Button
         android:id="@+id/button9"
