--- a/app/src/main/res/layout/activity_evento_usuario.xml
+++ b/app/src/main/res/layout/activity_evento_usuario.xml
@@ -28,6 +28,7 @@
         android:layout_marginTop="84dp"
         android:layout_marginEnd="52dp"
         android:backgroundTint="#CC235D"
+        android:onClick="buscarEvento"
         android:text="Sé un voluntario"
         android:textAllCaps="true"
         android:textColor="#FFFEFE"
