--- a/app/src/main/res/layout/activity_organizacion.xml
+++ b/app/src/main/res/layout/activity_organizacion.xml
@@ -55,7 +55,7 @@
         android:background="#E4E4E4"
         android:backgroundTint="#FFFFFF"
         android:text=" Puntos de recoleccón"
-        app:layout_constraintBottom_toTopOf="@+id/button7"
+        app:layout_constraintBottom_toTopOf="@+id/bttnEvento"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView7"
         app:layout_constraintTop_toBottomOf="@+id/CrearORG" />
@@ -112,7 +112,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView_empresa" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/bttnEvento"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="121dp"
@@ -135,7 +135,7 @@
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/button7" />
+        app:layout_constraintTop_toBottomOf="@+id/bttnEvento" />
 
     <ImageView
         android:id="@+id/imageView9"
@@ -159,7 +159,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="12dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView3"
-        app:layout_constraintEnd_toStartOf="@+id/button7"
+        app:layout_constraintEnd_toStartOf="@+id/bttnEvento"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView7"
         app:srcCompat="@android:drawable/ic_menu_day"
