--- a/app/src/main/res/layout/main_itemorg.xml
+++ b/app/src/main/res/layout/main_itemorg.xml
@@ -8,8 +8,8 @@
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="411dp"
+        android:layout_height="152dp"
         android:padding="15dp">
 
 
@@ -17,7 +17,6 @@
             android:id="@+id/img1"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_centerVertical="true"
             android:src="@mipmap/ic_launcher"
             app:civ_border_color="#FF000000"
             app:civ_border_width="2dp" />
@@ -43,8 +42,7 @@
             android:layout_toRightOf="@id/textoCantidadD"
             android:text=""
             android:textColor="#000"
-            android:textSize="25sp"
-            />
+            android:textSize="25sp" />
 
         <TextView
             android:id="@+id/CantidadAct"
@@ -55,8 +53,7 @@
             android:layout_toRightOf="@id/Actnombre"
             android:text=""
             android:textColor="#000"
-            android:textSize="25sp"
-            />
+            android:textSize="25sp" />
 
         <TextView
             android:id="@+id/Actnombre"
@@ -81,12 +78,31 @@
             android:textColor="#000"
             android:textSize="25sp"
             android:textStyle="bold" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/Actnombre"
             android:orientation="horizontal">
 
+            <Button
+                android:layout_width="173dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/btn_bg"
+                android:text="Edit"
+                android:textAllCaps="false"
+                android:id="@+id/btnEdit"/>
+            <Button
+                android:layout_width="173dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/btn_bg"
+                android:text="Delete"
+                android:textAllCaps="false"
+                android:id="@+id/btnDelete"/>
         </LinearLayout>
+
 
     </RelativeLayout>
 
