--- a/app/src/main/res/layout/activity_evento_usuario.xml
+++ b/app/src/main/res/layout/activity_evento_usuario.xml
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/bttnPuntos"
         android:layout_width="0dp"
         android:layout_height="54dp"
         android:layout_marginStart="55dp"
