--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/bttnPuntos"
         android:layout_width="141dp"
         android:layout_height="58dp"
         android:layout_marginStart="135dp"
