--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -20,8 +20,8 @@
 
     <TextView
         android:id="@+id/Nombre"
-        android:layout_width="115dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="116dp"
         android:text="hola"
         android:textColor="#000"
