--- a/app/src/main/res/layout/activity_evento_usuario.xml
+++ b/app/src/main/res/layout/activity_evento_usuario.xml
@@ -59,13 +59,13 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginBottom="15dp"
         android:text="Aquí verás los eventos disponibles del momento"
         android:textAllCaps="true"
         android:textColor="#E91E63"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
