--- a/app/src/main/res/layout/activity_main_adapter_org.xml
+++ b/app/src/main/res/layout/activity_main_adapter_org.xml
@@ -23,15 +23,14 @@
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#00BCD4"
         android:clickable="true"
         android:src="@drawable/add_new"
-        android:backgroundTint="#FF8400"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.87"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.925"
-        />
+        app:layout_constraintVertical_bias="0.925" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
