--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="116dp"
         android:text="hola"
-        android:textColor="#000"
+        android:textColor="#C61438"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/CrearORG"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,6 +55,7 @@
         android:layout_marginTop="623dp"
         android:layout_marginEnd="135dp"
         android:layout_marginBottom="50dp"
+        android:background="#FF4141"
         android:backgroundTint="#FFFFFF"
         android:text="Configuración"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -64,21 +65,23 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="59dp"
-        android:layout_height="58dp"
+        android:layout_width="63dp"
+        android:layout_height="60dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="623dp"
         android:layout_marginEnd="312dp"
         android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.227"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_preferences" />
+        app:layout_constraintVertical_bias="0.458"
+        app:srcCompat="@drawable/icono_config" />
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="112dp"
+        android:layout_width="87dp"
         android:layout_height="58dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="365dp"
@@ -86,9 +89,10 @@
         android:layout_marginBottom="308dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_mylocation" />
+        app:srcCompat="@drawable/icono_puntos" />
 
     <Button
         android:id="@+id/CrearORG"
@@ -147,23 +151,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_compass"
-        tools:srcCompat="@android:drawable/ic_menu_add" />
+        app:srcCompat="@drawable/icono_donacion"
+        tools:srcCompat="@drawable/icono_donacion" />
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="101dp"
-        android:layout_height="58dp"
+        android:layout_width="100dp"
+        android:layout_height="64dp"
         android:layout_marginStart="23dp"
         android:layout_marginTop="448dp"
         android:layout_marginEnd="287dp"
         android:layout_marginBottom="225dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.588"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_day"
-        tools:srcCompat="@android:drawable/ic_menu_agenda" />
+        app:layout_constraintVertical_bias="0.467"
+        app:srcCompat="@drawable/icono_eventos"
+        tools:srcCompat="@drawable/icono_eventos" />
 
     <ImageView
         android:id="@+id/imageView11"
@@ -177,7 +183,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_day"
+        app:srcCompat="@drawable/basket"
         tools:srcCompat="@drawable/basket" />
 
     <Button
@@ -198,7 +204,9 @@
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/CrearORG"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Nombre" />
+        app:layout_constraintTop_toBottomOf="@+id/Nombre"
+        app:layout_constraintVertical_bias="0.164" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
